--- a/app/views/pages/parcours.html.erb
+++ b/app/views/pages/parcours.html.erb
@@ -5,7 +5,7 @@
             L'activité de plein air parfaite pour réunir famille, amis et collègues en centre-ville de Bourges au cours d'un moment à la fois divertissant et enrichissant.
         </p>
         <div class="ctas-container">
-            <%= link_to 'Réservez dès maintenant', new_inscription_booking_info_path, class: "cta cta-primary", role:"button" %>
+            <%= link_to 'Réservez dès maintenant', reservation_path, class: "cta cta-primary", role:"button" %>
         </div>
     </div>
     <div class="half">
@@ -95,5 +95,5 @@
     <%= image_tag "jeu-piste-activite-parcours-plein-air-divertissante-famille-amis-bourges-nuits-lumieres", class:"landscape-banner-image", alt:"Objet magique contenu dans le sac de jeu La grande His'Tory, sous la lumière bleue des Nuits Lumières de Bourges." %>
     <h2>Réservez <mark class="highlighted highlighted-red">dès maintenant</mark></h2>
     <p class="sub-title">L'aventure vous attend. Réunissez vos meilleurs amis et lancez vous dans l'aventure ! Il ne manque plus que vous pour briller.</p>
-    <%= link_to 'Réservez dès maintenant', new_inscription_booking_info_path, class: "cta cta-big cta-primary", role:"button" %>
+    <%= link_to 'Réservez dès maintenant', reservation_path, class: "cta cta-big cta-primary", role:"button" %>
 </section>
