--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -20,7 +20,7 @@
         label {
             font-size: 16px;
         }
-        input {
+        input, textarea {
             padding: 16px;
             margin-top: 8px;
             width: 100%;
@@ -54,6 +54,13 @@
         margin-top: 16px;
     }
 }
+
+// formulaire page de reservation temporaire !
+#message {
+    min-height: 160px;
+}
+
+// fin de CSS formulaire temporaire
 
 fieldset {
     border: none;
