--- a/app/views/pages/tarifs.html.erb
+++ b/app/views/pages/tarifs.html.erb
@@ -3,7 +3,7 @@
         <h1>Les tarifs de nos <mark class="highlighted highlighted-red">escape games en plein air</mark></h1>
         <p class="sub-title">Par ici la monnaie ! Vous retrouverez ici nos tarifs concernant les escape game urbains.</p>
         <div class="ctas-container">
-            <%= link_to 'Réservez dès maintenant', new_inscription_booking_info_path, class: "cta cta-primary", role:"button" %>
+            <%= link_to 'Réservez dès maintenant', reservation_path, class: "cta cta-primary", role:"button" %>
         </div>
     </div>
     <div class="half">
