--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
         <li><%= link_to "Accueil", root_path %></li>
         <li><%= link_to "Jeux", parcours_path %></li>
         <li><%= link_to "Tarifs", tarifs_path %></li>
-        <li><%= link_to "Réservation", new_inscription_booking_info_path %></li>
+        <li><%= link_to "Réservation", reservation_path %></li>
         <li><%= link_to "Podcast Nuits Lumière", nuitslumiere_path %></li>
     </ul>
 </nav>
