bouton pour podcast nuits lumiere sur page accueil

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -27,6 +27,11 @@
     box-shadow: 0 2px 14px rgba(126,87,88,.1), 0 3px 6px rgba(0,0,0,.08);
 }
 
+.cta-blue {
+    color: var(--night-blue);
+    color: #1D40BA;
+}
+
 .cta-inactive {
     background-color: #fff;
     color: var(--light-black);
