--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -20,6 +20,8 @@
 	--light-purple: #ebe9fe;
 	--blue: #739CBD;
 	--light-blue: #e4f3ff;
+	--night-blue: #1D40BA;
+	--light-night-blue: #dde5ff;
 	--dark-blue: #1596ff;
 	--green: #7EBA28;
 	--light-green: #f0ffda;
