--- a/app/assets/stylesheets/layouts/_global.scss
+++ b/app/assets/stylesheets/layouts/_global.scss
@@ -42,6 +42,7 @@ strong, b {
 }
 
 .wrapper-blue, .full-wrapper-blue {
+	background-color: var(--light-night-blue);
 	background-color: #dde5ff;
 }
 
