--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
         </p>
         <div class="ctas-container">
             <%= link_to 'Réservez dès maintenant', reservation_path, class: "cta cta-primary", role:"button" %>
-            <%= link_to 'Découvrez nos jeux', root_path(anchor: "explore-games"), class: "cta cta-secondary", role:"button" %>
+            <%= link_to 'Notre balade audio Nuits Lumière', nuitslumiere_path, class: "cta cta-secondary", role:"button" %>
         </div>
     </div>
     <div class="half">
