correction d'un lien vers les avis Google des joueurs

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -55,7 +55,7 @@
                                     <i>avis Google</i>
                                 </span>
                                 <p class="datatron-item-content">De nombreux joueurs ont testé le jeu avant vous, et l'ont adoré. A votre tour d'en profiter !</p>
-                                <a class="cta-link" href="/">Lire les avis des joueurs</a>
+                                <%= link_to 'Lire les avis Google des joueurs', 'https://g.page/lesmysteresdebourges', class:"cta-link" %>
                             </li>
                             <li class="datatron-item">
                                 <span class="datatron-item-title-large">
