ajout meta titre different selon les pages

--- a/app/views/pages/cgu.html.erb
+++ b/app/views/pages/cgu.html.erb
@@ -1,3 +1,6 @@
+<% content_for :meta_title, "Conditions générales de vente | #{DEFAULT_META["meta_title"]}" %>
+<% content_for :meta_description, "Retrouvez les détails des conditions générales vente et d'utilisation de nos services. C'est vraiment pas la page la plus fun ..." %>
+
 <header class="wrapper header-mobile header-home">
     <h1>Conditions générales de vente</h1>
 </header>
