--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,3 +1,7 @@
+<% content_for :meta_title, "Contact | #{DEFAULT_META["meta_title"]}" %>
+<% content_for :meta_description, "Comment nous contacter pour en savoir plus sur nos activités. Toutes les réponses sont sur cette page." %>
+
+
 <header class="wrapper header-mobile header-home">
     <div class="half">
         <h1>Contactez-nous</h1>
