--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,6 @@
+<% content_for :meta_title, "#{DEFAULT_META["meta_title"]}" %>
+<% content_for :meta_description, "La meilleure activité de plein air à Bourges. Découvrez nos jeux de piste et escape games autour du patrimoine de la ville de Bourges et du Berry." %>
+
 <header class="wrapper header-mobile header-home">
     <div class="half">
         <h1>Escape game en plein air et activité œnoludique à <mark class="highlighted highlighted-red">Bourges</mark></h1>
