--- a/app/views/pages/nuitslumiere.html.erb
+++ b/app/views/pages/nuitslumiere.html.erb
@@ -1,3 +1,7 @@
+<% content_for :meta_title, "Nuits lumière | #{DEFAULT_META["meta_title"]}" %>
+<% content_for :meta_description, "Retrouvez 'Mes nuits bleues' notre podcast-audioguide pour vous accompagnez à la découverte des illuminations estivales de la ville de Bourges, au cours d'une balade sonore inédite." %>
+
+
 <header class="wrapper header-mobile header-home">
     <div class="half">
         <h1>Voici "Mes nuits bleues", notre balade sonore pour parcourir <mark class="highlighted highlighted-blue">les Nuits Lumière</mark></h1>
