--- a/app/views/pages/reservation.html.erb
+++ b/app/views/pages/reservation.html.erb
@@ -1,3 +1,6 @@
+<% content_for :meta_title, "Réservation | #{DEFAULT_META["meta_title"]}" %>
+<% content_for :meta_description, "Vous êtes à deux doigts de vivre une aventure unique. Il ne manque plus que vous !" %>
+
 <header class="wrapper header-mobile header-home">
     <div class="half">
         <h1>Vous voici tout près d'une <mark class="highlighted highlighted-red">nouvelle aventure</mark></h1>
