--- a/app/views/pages/tarifs.html.erb
+++ b/app/views/pages/tarifs.html.erb
@@ -1,3 +1,6 @@
+<% content_for :meta_title, "Tarifs | #{DEFAULT_META["meta_title"]}" %>
+<% content_for :meta_description, "Notre grille tarifaire pour venir participer à l'aventure des Mystères de Bourges, les jeux de piste en plein air façon escape game." %>
+
 <header class="wrapper header-mobile header-home">
     <div class="half">
         <h1>Les tarifs de nos <mark class="highlighted highlighted-red">escape games en plein air</mark></h1>
