--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -1,3 +1,6 @@
+<% content_for :meta_title, "La foire aux questions | #{DEFAULT_META["meta_title"]}" %>
+<% content_for :meta_description, "La fameuse FAQ que tout bon site internet se doit d'avoir." %>
+
 <header class="wrapper header-mobile header-home">
     <div class="half">
         <h1>Foire aux <mark class="highlighted highlighted-red">questions</mark></h1>
