ajout qr code et sassou sur la page nuits lumiere

--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -1,4 +1,4 @@
-<% content_for :meta_title, "La foire aux questions | #{DEFAULT_META["meta_title"]}" %>
+<% content_for :meta_title, "Foire aux questions | #{DEFAULT_META["meta_title"]}" %>
 <% content_for :meta_description, "La fameuse FAQ que tout bon site internet se doit d'avoir." %>
 
 <header class="wrapper header-mobile header-home">
