--- a/app/views/pages/nuitslumiere.html.erb
+++ b/app/views/pages/nuitslumiere.html.erb
@@ -36,6 +36,30 @@
             <li><em>C’est qui, Jacques Cœur ?</em></li>
             <li><em>C’est qui, Louis XI ?</em></li>
         </ol>
+        <h2>Une expérience de <mark class="highlighted highlighted-blue">partage</mark></h2>
+        <ul class="cards-wrapper">
+            <li class="card-container">
+                <%= image_tag "nuits-lumiere-bourges-viste-touriste-balade-audio-podcast-qrcode.png", class:"card-cover-image", alt: "QR Code de la page 'Nuits lumière' pour permettre le partage de celle-ci à ses proches tout au long du parcours." %>
+                <div class="card-content">
+                    <h3>Partagez avec plaisir</h3>
+                    <p class="sub-title">Partagez ce QR Code auprès de vos proches et des autres passants pour leur permettre d'accéder immédiatement à cette page.</p>
+                </div>
+            </li>
+            <li class="card-container">
+                <%= image_tag "bonjoursassou-sarah-banmouha-lesmysteresdebourges-podcast-nuits-lumiere-bourges.jpg", class:"card-cover-image", alt: "Vue de dos de 3 joueurs, chacun porte un sac de jeu de La grande HisTory, parcours jeu de piste façon escape game à Bourges autour de la vie de Geoffroy Tory" %>
+                <div class="card-content">
+                    <h3>@bonjoursassou</h3>
+                    <p class="sub-title">Les scripts, choix musicaux et voix-off ont été réalisés par <%= link_to 'BonjourSassou', 'https://www.instagram.com/BonjourSassou' %>. Merci Sarah pour ton magnifique travail et ton efficacité légendaire.</p>
+                </div>
+            </li>
+            <li class="card-container">
+                <%= image_tag "escape-game-bourges-loisirs-patrimoine-berruyers.jpg", class:"card-cover-image", alt: "Photo Pierre Mérat : Vue contre-plongée de Sophie et Clément Bouakkaz, cofondateurs des jeux de piste Les Mystères de Bourges, escape game urbain à Bourges autour du patrimoine de la ville" %>
+                <div class="card-content">
+                    <h3>Sophie, Clément & Vous</h3>
+                    <p class="sub-title">Nous sommes ravis que vous ayez choisi notre podcast pour parcourir les Nuits Lumière. Nous l'avons voulu accessible au plus grand nombre et espérons qu'il vous plaira.</p>
+                </div>
+            </li>
+        </ul>
     </div>
 </section>
 <section class="wrapper wrapper-white">
