correction balise alt image bonjoursassou

--- a/app/views/pages/nuitslumiere.html.erb
+++ b/app/views/pages/nuitslumiere.html.erb
@@ -46,7 +46,7 @@
                 </div>
             </li>
             <li class="card-container">
-                <%= image_tag "bonjoursassou-sarah-banmouha-lesmysteresdebourges-podcast-nuits-lumiere-bourges.jpg", class:"card-cover-image", alt: "Vue de dos de 3 joueurs, chacun porte un sac de jeu de La grande HisTory, parcours jeu de piste façon escape game à Bourges autour de la vie de Geoffroy Tory" %>
+                <%= image_tag "bonjoursassou-sarah-banmouha-lesmysteresdebourges-podcast-nuits-lumiere-bourges.jpg", class:"card-cover-image", alt: "Portrait de Sarah Banhmouha alias, @bonjoursassou, près de la cathédrale Saint-Etienne à Bourges." %>
                 <div class="card-content">
                     <h3>@bonjoursassou</h3>
                     <p class="sub-title">Les scripts, choix musicaux et voix-off ont été réalisés par <%= link_to 'BonjourSassou', 'https://www.instagram.com/BonjourSassou' %>. Merci Sarah pour ton magnifique travail et ton efficacité légendaire.</p>
