--- a/app/views/pages/nuitslumiere.html.erb
+++ b/app/views/pages/nuitslumiere.html.erb
@@ -13,6 +13,7 @@
 </header>
 <section class="full-wrapper-blue datatron-home">
     <div class="wrapper wrapper-blue">
+        <h2>La playlist complète</h2>
         <div id="soundcloud-playlist">
             <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1453523509&color=%231D40BA&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #1D40BA;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/lesmysteresdebourges" title="lesmysteresdebourges" target="_blank" style="color: #1D40BA; text-decoration: none;">lesmysteresdebourges</a> · <a href="https://soundcloud.com/lesmysteresdebourges/sets/mes-nuits-bleues" title="Mes nuits bleues" target="_blank" style="color: #1D40BA; text-decoration: none;">Mes nuits bleues</a></div>
         </div>
