image page contact

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -13,4 +13,7 @@
             <li>sur <%= link_to 'notre compte Instagram', 'https://www.instagram.com/lesmysteresdebourges' %></li>
         </ul>
     </div>
+    <div class="half">
+        <%= image_tag "contact-mysteres-bourges-jacques-coeur-escape-game-activite-patrimoine-visite-insolite.jpg", class:"header-img", alt:"Groupe de filles venues jouer à A vaillant coeur, escape game urbain en plein air, pour un EVJF à Bourges." %>
+    </div>
 </header>
