changement photo page nuits lumiere et ajout texte moyens de paiement page tarifs

--- a/app/views/pages/nuitslumiere.html.erb
+++ b/app/views/pages/nuitslumiere.html.erb
@@ -19,7 +19,7 @@
         </div>
         <h2>Mode d'emploi du podcast <mark class="highlighted highlighted-blue">"Mes nuits bleues"</mark></h2>
         <ol>
-            <li>La piste 1, <em>Bienvenue à Bourges</em>, est un mode d’emploi, écoutez-le attentivement et passez à l’épisode suivant de notre podcast <em>Mes nuits bleues</em> ! <b>(1’30)</b></li>
+            <li>La piste 1, <em>Bienvenue à Bourges</em>, est un mode d’emploi, écoutez-le attentivement et passez à l’épisode suivant de notre podcast <em>Mes nuits bleues</em> ! <b>(1’30)</b> </li>
             <li>Avant de visionner la projection du Jardin de l’Archevêché, lancez l’épisode 2, <em>Il était une fois Bourges</em>. Découvrez le Bourges médiéval avec le duc Jean de Berry, mais également l’histoire antique de la ville. Percez tous les mystères de la ville sur l’ancien rempart gallo-romain ! <b>(4’45)</b></li>
             <li>Après avoir visionné les illuminations du Jardin de l’Archevêché, lancez l’épisode 3 <em>Bourges d’hier et aujourd’hui</em> puis dirigez-vous vers la place Étienne Dolet. L’université de Bourges, le patrimoine industriel et culinaire, le basket, le Printemps de Bourges… Un voyage du XVe au XXIe siècle vous attend ici, sur l’ancien palais archiépiscopal ! <b>(5’50)</b></li>
             <li>Une fois votre visionnage terminé, lancez l’épisode 4 <em>Bourges renaissant</em> et reprenez votre route vers l’Hôtel Lallemant. Un petit tour dans le Bourges renaissant, ça vous dit ? Rendez-vous chez les Lallemant pour en (sa)voir plus ! <b>(6’15)</b></li>
@@ -40,7 +40,7 @@
         <h2>Une expérience de <mark class="highlighted highlighted-blue">partage</mark></h2>
         <ul class="cards-wrapper">
             <li class="card-container">
-                <%= image_tag "nuits-lumiere-bourges-viste-touriste-balade-audio-podcast-qrcode.png", class:"card-cover-image", alt: "QR Code de la page 'Nuits lumière' pour permettre le partage de celle-ci à ses proches tout au long du parcours." %>
+                <%= image_tag "nuits-lumiere-bourges-viste-touriste-balade-audio-podcast-qrcode.jpg", class:"card-cover-image", alt: "QR Code de la page 'Nuits lumière' pour permettre le partage de celle-ci à ses proches tout au long du parcours." %>
                 <div class="card-content">
                     <h3>Partagez avec plaisir</h3>
                     <p class="sub-title">Partagez ce QR Code auprès de vos proches et des autres passants pour leur permettre d'accéder immédiatement à cette page.</p>
@@ -54,7 +54,7 @@
                 </div>
             </li>
             <li class="card-container">
-                <%= image_tag "escape-game-bourges-loisirs-patrimoine-berruyers.jpg", class:"card-cover-image", alt: "Photo Pierre Mérat : Vue contre-plongée de Sophie et Clément Bouakkaz, cofondateurs des jeux de piste Les Mystères de Bourges, escape game urbain à Bourges autour du patrimoine de la ville" %>
+                <%= image_tag "sophie-clement-bouakkaz-createurs-escape-game-urbain-mysteres-bourges.jpg", class:"card-cover-image", alt: "Photo Pierre Mérat : Vue contre-plongée de Sophie et Clément Bouakkaz, cofondateurs des jeux de piste Les Mystères de Bourges, escape game urbain à Bourges autour du patrimoine de la ville" %>
                 <div class="card-content">
                     <h3>Sophie, Clément & Vous</h3>
                     <p class="sub-title">Nous sommes ravis que vous ayez choisi notre podcast pour parcourir les Nuits Lumière. Nous l'avons voulu accessible au plus grand nombre et espérons qu'il vous plaira.</p>
