--- a/app/views/pages/tarifs.html.erb
+++ b/app/views/pages/tarifs.html.erb
@@ -47,6 +47,8 @@
                 <div class="price">50 euros</div>
             </div>
         </div>
+        <h2>Moyens de paiement acceptés</h2>
+        <p class="sub-title">Nous acceptons uniquement les paiements par carte bancaire, ou espèces. Nous n'acceptons pas les chèques, ni les chèques-vacances.</p>
     </div>
 </section>
 <section class="wrapper wrapper-white">
