--- a/app/assets/stylesheets/pages/_nuitslumiere.scss
+++ b/app/assets/stylesheets/pages/_nuitslumiere.scss
@@ -1,3 +1,12 @@
 #soundcloud-playlist {
     margin-bottom: 2em;
 }
+
+#night-playlist {
+    li {
+        margin-bottom: 1em;
+        a {
+            display: block;
+        }
+    }
+}
