liens entre pages

--- a/app/views/pages/a_vaillant_coeur.html.erb
+++ b/app/views/pages/a_vaillant_coeur.html.erb
@@ -23,7 +23,7 @@
         <p class="sub-title">Nous sommes le 30 juillet 1451. Jacques Cœur se sait menacé. Le lendemain, le Grand Conseil du Roi le condamne pour le crime de lèse-majesté. Malin et rusé, il aurait caché une partie de sa fortune peu avant son arrestation. La clé de la salle des trésors du Palais Jacques Cœur est à ce jour introuvable. Saurez-vous percer le mystère et retrouver la fortune de Jacques Cœur ?</p>
         <p class="sub-title">À l’aide d’un carnet de route et d’une carte, arpentez la ville de Bourges grâce à notre aventure et percez les mystères de notre étrange besace. Décodez, observez, ouvrez les yeux et arpentez la ville à la recherche de véritables indices. Découvrez les vieux quartiers du centre-ville comme vous ne les avez jamais vus ! En équipe, résolvez des énigmes, guettez le temps imparti et venez vivre une aventure insolite et originale. Vous et votre équipe êtes les héros de cette histoire surprenante !</p>
         <p class="sub-title">Serez-vous à la hauteur du défi ?</p>
-       <%= image_tag "activite-bourges-plein-air-escape-game-kit-jeu-tourisme-patrimoine-banner", class:"landscape-banner-image", alt:"Kit de jeu pour chasse au trésor à Bourges, sous forme d'escape game en plein air" %>
+        <%= image_tag "activite-bourges-plein-air-escape-game-kit-jeu-tourisme-patrimoine-banner", class:"landscape-banner-image", alt:"Kit de jeu pour chasse au trésor à Bourges, sous forme d'escape game en plein air" %>
     </div>
 </section>
 <section class="wrapper wrapper-white">
@@ -34,6 +34,7 @@
             <div class="card-content">
                 <h3>Nombre de joueurs</h3>
                 <p class="sub-title">En couple avec 2 joueurs ou jusqu'à 20 personnes en multi-équipes. Nous pouvons faire jouer jusqu'à 5 équipes simultanément.</p>
+                <%= link_to "Connaître les tarifs", tarifs_path, class: "cta-link" %>
             </div>
         </li>
         <li class="card-container">
