--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -24,6 +24,13 @@
             font-size: 1.1em;
             font-size: var(--big-paragraph);
         }
+        p {
+            margin-bottom: 10px;
+        }
+        a {
+            display: block;
+            margin-bottom: 10px;
+        }
         .game-pictures-grid {
             display: grid;
             grid-template: 1fr 1fr / 1fr 1fr;
