--- a/app/views/pages/a_vaillant_coeur.html.erb
+++ b/app/views/pages/a_vaillant_coeur.html.erb
@@ -34,7 +34,7 @@
             <div class="card-content">
                 <h3>Nombre de joueurs</h3>
                 <p class="sub-title">En couple avec 2 joueurs ou jusqu'à 20 personnes en multi-équipes. Nous pouvons faire jouer jusqu'à 5 équipes simultanément.</p>
-                <%= link_to "Connaître les tarifs", tarifs_path, class: "cta-link" %>
+                <%= link_to "👉 Connaître les tarifs", tarifs_path, class: "cta-link" %>
             </div>
         </li>
         <li class="card-container">
