fin création page JC et GT avec les bonnes photos

--- a/app/views/pages/a_vaillant_coeur.html.erb
+++ b/app/views/pages/a_vaillant_coeur.html.erb
@@ -49,7 +49,7 @@
             <%= image_tag "acces-centre-ville-bourges-velo-cargo-bus-voiture-parking.jpg", class:"card-cover-image", alt: "Sophie en vélo cargo rue Moyenne à Bourges près de la Poste" %>
             <div class="card-content">
                 <h3>Accès</h3>
-                <p class="sub-title"><b>En voiture :</b> parking Séraucourt (gratuit), parking Hôtel Dieu, parking Nation, parking Juranville, parking Centre commercial Avaricum. <b>En bus :</b> Arrêts Nation ou Planchat.</p>
+                <p class="sub-title"><b>En voiture :</b> parking Séraucourt (gratuit), parking Hôtel Dieu, parking Nation, parking Juranville, parking Centre commercial Avaricum.</br><b>En bus :</b> Arrêts Nation ou Planchat.</p>
             </div>
         </li>
         <li class="card-container">
@@ -70,7 +70,7 @@
             <%= image_tag "soleil-meteo-parcours-plein-air-activite-famille-tourisme-faire-bourges.jpg", class:"card-cover-image", alt: "Il fait chaud sur le parcours A vaillant coeur durant l'été à Bourges" %>
             <div class="card-content">
                 <h3>Ensoleillement</h3>
-                <p class="sub-title">Le parcours possède un ensoleillement potentiellement élevé en cas de très forte chaleur.</p>
+                <p class="sub-title">Le parcours possède un ensoleillement potentiellement élevé en cas de très forte chaleur. En période de canicule, privilégiez le parcours <%= link_to "la grande his'Tory", la_grande_history_path %> avec plus d'ombre.</p>
             </div>
         </li>
     </ul>
