--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
         </div>
     </div>
     <div class="half">
-        <%= image_tag "homepage-header.jpg", class:"header-img", alt:"Une équipe au départ du jeu devant la statue de Jacques Coeur. Les mystères de Bourges, la meilleure activité de plein air à Bourges - Un escape game jeu de piste inédit !" %>
+        <%= image_tag "cathedrale-bourges-escape-game-urbain-mysteres-bourges-jeu-chasse-tresor-patrimoine.jpg", class:"header-img", alt:"Une équipe au départ du jeu devant la statue de Jacques Coeur. Les mystères de Bourges, la meilleure activité de plein air à Bourges - Un escape game jeu de piste inédit !" %>
     </div>
 </header>
 <section class="full-wrapper-red datatron-home">
