--- a/app/views/pages/parcours.html.erb
+++ b/app/views/pages/parcours.html.erb
@@ -37,6 +37,7 @@
                     <div class="game-details">
                         <h3>📖 La grande his'Tory</h3>
                         <p>Partez sur les traces de Geoffroy Tory, berruyer méconnu qui a pourtant révolutionné la langue française à la Renaissance. Parviendrez-vous à mettre la main sur son trésor ? </p>
+                        <%= link_to "👉 tous les détails du parcours", la_grande_history_path, class: "cta-link" %>
                     </div>
                     <div class="game-pictures-grid">
                         <% [8, 9, 4, 10].each do |x| %>
