--- a/app/views/pages/tarifs.html.erb
+++ b/app/views/pages/tarifs.html.erb
@@ -16,7 +16,7 @@
 <section class="full-wrapper-red datatron-home">
     <div class="wrapper wrapper-red">
         <h2>Combien ça coûte ?</h2>
-        <p class="sub-title">Parce que notre ville est unique, nos parcours le sont aussi ! Les histoires berruyères que vous allez (re)découvrir, vous ne les verrez nulle part ailleurs. Ces jeux, éducatifs, culturels et divertissants, nous les avons écrits, mis en page, imaginés et conçus, jusqu’à fabriquer nous-mêmes des objets inédits. Sur nos deux parcours, vous êtes autonomes, mais notre équipe est toujours là pour vous accompagner ! Tout a été créé sur mesure, pour vous offrir une expérience ludique et originale. Une activité pour s’amuser tout en apprenant, ça n’a pas de prix, non ?</p>
+        <p class="sub-title">Parce que notre ville est unique, <%= link_to 'nos parcours', parcours_path %> le sont aussi ! Les histoires berruyères que vous allez (re)découvrir, vous ne les verrez nulle part ailleurs. Ces jeux, éducatifs, culturels et divertissants, nous les avons écrits, mis en page, imaginés et conçus, jusqu’à fabriquer nous-mêmes des objets inédits. Sur nos deux parcours, vous êtes autonomes, mais notre équipe est toujours là pour vous accompagner ! Tout a été créé sur mesure, pour vous offrir une expérience ludique et originale. Une activité pour s’amuser tout en apprenant, ça n’a pas de prix, non ?</p>
         <div class="price-cards">
             <div class="price-card">
                 <div class="price-card-title">
