--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -8,6 +8,8 @@
             <span>Tout ce qu'il faut savoir</span>
             <ul>
                 <li><%= link_to 'Nos parcours', parcours_path %></li>
+                <li><%= link_to 'A vaillant coeur ❤️', a_vaillant_coeur_path %></li>
+                <li><%= link_to "La grande his'Tory 📖", la_grande_history_path %></li>
                 <li><%= link_to 'Tarifs / Bon cadeau', tarifs_path %></li>
                 <%# <li><a href="avis-escape-game-bourges.html">Avis de joueurs</a></li> %>
                 <li><%= link_to 'Foire aux questions', faq_path %></li>
