page wine gaming

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -32,6 +32,13 @@
     color: #1D40BA;
 }
 
+.cta-primary-wine {
+    background-color: var(--red-wine);
+    background-color: #C9184A;
+    border-color: var(--red-wine);
+    border-color: #C9184A;
+}
+
 .cta-inactive {
     background-color: #fff;
     color: var(--light-black);
