--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -5,7 +5,9 @@
 :root {
 	--red: #EB5754;
 	--dark-red: #bb0300;
+	--red-wine: #C9184A;
 	--light-red: #fff0ef;
+	--light-red-wine: #FFF1F5;
 	--black: #0e0000;
 	--dark-grey: #4a4a4a;
 	--grey: #4b4b4b;
