--- a/app/assets/stylesheets/components/_title.scss
+++ b/app/assets/stylesheets/components/_title.scss
@@ -30,6 +30,11 @@ h1 {
     color: #1D40BA;
 }
 
+.highlighted-wine {
+    color: var(--red-wine);
+    color: #C9184A;
+}
+
 .sub-title {
     margin-bottom: 30px;
     font-size: 1.1em;
