ajout boutton bas de page

--- a/app/views/pages/wine_gaming.html.erb
+++ b/app/views/pages/wine_gaming.html.erb
@@ -86,3 +86,8 @@
         <%= image_tag "wine-gaming-seminaire-entreprise-abbay-noirlac-exception-lieu-team-building-cohesion-equipe-performance", class:"landscape-banner-image", alt:"Wine Gaming est l'activité parfaite pour cloturer votre journée de séminaire et gagner le coeur de vos équipes." %> 
     </div>
 </section>
+<section class="wrapper wrapper-white">
+<h2>Contactez-nous <mark class="highlighted highlighted-wine">dès maintenant</mark></h2>
+    <p class="sub-title">La réussite de votre événement ne dépend plus que de vous. Discutons de votre idée et de l'organisation de votre journée pour que nous puissions nous adapter à vos souhaits.</p>
+    <%= link_to 'Contactez-nous dès maintenant', contact_path, class: "cta cta-big cta-primary cta-primary-wine", role:"button" %>
+</section>
