--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -37,6 +37,7 @@
                     <div class="game-details">
                         <h3>🍷 Wine Gaming</h3>
                         <p>Pour vos séminaires et afterworks, boostez la cohésion de vos équipes avec un jeu mélant énigmes et dégustation de vins. Découvrez vite la nouveauté 2022 !</p>
+                        <%= link_to "👉 en savoir plus sur le Wine Gaming", wine_gaming_path, class: "cta-link" %>
                     </div>
                     <div class="game-pictures-grid">
                         <% (1..4).each do |x| %>
