--- a/app/views/pages/wine_gaming.html.erb
+++ b/app/views/pages/wine_gaming.html.erb
@@ -82,12 +82,12 @@
     <div class="wrapper wrapper-wine">
         <h2>Votre mission <mark class="highlighted highlighted-wine">Wine Gaming</mark> ?</h2>
         <p class="sub-title">De par nos activités d’agents mystères, nous avons découvert l'existence d’une confrérie locale secrète. Nos recherches nous ont révélé qu’une épreuve initiatique était nécessaire pour l’intégrer. Trop connus dans la région pour y prendre part, nous cherchons des agents doubles pour infiltrer cette confrérie. Grâce à notre réseau d'agents, nous avons déjà réussi à dérober des documents confidentiels. Ces derniers nous ont permis de créer un test préalable afin de former nos futurs agents à l’épreuve initiatique de ce cercle secret. Serez-vous prêts pour intégrer la confrérie secrète ?</p>
-        <p class="sub-title">Pour toute demande de renseignement et de devis, <%= link_to 'contactez-nous', contact_path %>.</p>
         <%= image_tag "wine-gaming-seminaire-entreprise-abbay-noirlac-exception-lieu-team-building-cohesion-equipe-performance", class:"landscape-banner-image", alt:"Wine Gaming est l'activité parfaite pour cloturer votre journée de séminaire et gagner le coeur de vos équipes." %> 
     </div>
 </section>
 <section class="wrapper wrapper-white">
 <h2>Contactez-nous <mark class="highlighted highlighted-wine">dès maintenant</mark></h2>
     <p class="sub-title">La réussite de votre événement ne dépend plus que de vous. Discutons de votre idée et de l'organisation de votre journée pour que nous puissions nous adapter à vos souhaits.</p>
+    <p class="sub-title">Pour toute demande de renseignement et de devis...</p>
     <%= link_to 'Contactez-nous dès maintenant', contact_path, class: "cta cta-big cta-primary cta-primary-wine", role:"button" %>
 </section>
