--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,6 +7,7 @@
         <div class="footer-section">
             <span>Tout ce qu'il faut savoir</span>
             <ul>
+                <li><%= link_to 'Wine Gaming 🍷', wine_gaming_path %></li>
                 <li><%= link_to 'Nos parcours', parcours_path %></li>
                 <li><%= link_to 'A vaillant coeur ❤️', a_vaillant_coeur_path %></li>
                 <li><%= link_to "La grande his'Tory 📖", la_grande_history_path %></li>
