ajouts liens vers wine gaming sur menu mobile

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,5 +14,6 @@
         <li><%= link_to "Tarifs", tarifs_path %></li>
         <li><%= link_to "Réservation", reservation_path %></li>
         <li><%= link_to "Podcast Nuits Lumière", nuitslumiere_path %></li>
+        <li><%= link_to "Wine Gaming", wine_gaming_path %></li>
     </ul>
 </nav>
