ajout d'images differentes pour open graph tags selon les pages

--- a/app/views/pages/wine_gaming.html.erb
+++ b/app/views/pages/wine_gaming.html.erb
@@ -1,5 +1,6 @@
 <% content_for :meta_title, "Wine gaming, l'activité parfaite pour votre événement d'entreprise | #{DEFAULT_META["meta_title"]}" %>
 <% content_for :meta_description, "Jeu idéal pour les groupes professionnels, mélant énigmes et dégustation de vin pour découvrir l'oenologie. " %>
+<% content_for :meta_image, "les_mysteres_de_bourges_wine_gaming_seminaire_entreprise_team_building_cohesion_equipe_bourges_open_graph_image" %>
 
 <header class="wrapper header-mobile header-home">
     <div class="half">
