changement de titre page mes nuits bleues

--- a/app/views/pages/nuitslumiere.html.erb
+++ b/app/views/pages/nuitslumiere.html.erb
@@ -1,4 +1,4 @@
-<% content_for :meta_title, "Nuits lumière | #{DEFAULT_META["meta_title"]}" %>
+<% content_for :meta_title, "Mes nuits bleues, un podcast audioguide pour les Nuits Lumières de Bourges. Une balade sonore proposée par @lesmysteresdebourges et @bonjoursassou" %>
 <% content_for :meta_description, "Retrouvez 'Mes nuits bleues' notre podcast-audioguide pour vous accompagnez à la découverte des illuminations estivales de la ville de Bourges, au cours d'une balade sonore inédite." %>
 <% content_for :meta_image, "les_mysteres_de_bourges_nuits_bleues_lumieres_podcast_audioguide_balade_sonore_open_graph_image" %>
 
