ajout page horaires

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,19 +7,20 @@
         <div class="footer-section">
             <span>Tout ce qu'il faut savoir</span>
             <ul>
-                <li><%= link_to 'Wine Gaming 🍷', wine_gaming_path %></li>
                 <li><%= link_to 'Nos parcours', parcours_path %></li>
                 <li><%= link_to 'A vaillant coeur ❤️', a_vaillant_coeur_path %></li>
                 <li><%= link_to "La grande his'Tory 📖", la_grande_history_path %></li>
                 <li><%= link_to 'Tarifs / Bon cadeau', tarifs_path %></li>
                 <%# <li><a href="avis-escape-game-bourges.html">Avis de joueurs</a></li> %>
-                <li><%= link_to 'Podcast Nuits Lumière', nuitslumiere_path %></li>
+                <li><%= link_to 'Horaires', horaires_path %></li>
+                <li><%= link_to 'Wine Gaming 🍷', wine_gaming_path %></li>
             </ul>
         </div>
         <div class="footer-section">
             <span>En savoir plus</span>
             <ul>
                 <li><%= link_to 'Contact', contact_path %></li>
+                <li><%= link_to 'Podcast Nuits Lumière', nuitslumiere_path %></li>
                 <li><%= link_to 'Foire aux questions', faq_path %></li>
                 <%# <li><a href="histoire-escape-game-bourges.html">Notre histoire</a></li>
                 <li><a href="presse-escape-game-bourges.html">Ils parlent de nous</a></li>
