--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -145,8 +145,7 @@
     <div class="wrapper wrapper-red">
         <h2>Infos <mark class="highlighted highlighted-red">pratiques</mark></h2>
         <p class="sub-title"><em>Les mystères de Bourges</em> vous accueillent uniquement <%= link_to 'sur réservation', reservation_path %>.</p>
-        <p class="sub-title"><strong>Horaires :</strong> Nous jouons du lundi au dimanche de 10h à 17h, toute l'année.</p>
-        <p class="sub-title">Nos jeux de piste sont situés en <strong>centre-ville de Bourges</strong>. Pour y accéder, vous pouvez venir :</p>
+        <p class="sub-title"><strong>Horaires :</strong> Nous jouons du lundi au dimanche de 10h à 18h, toute l'année. <%= link_to 'Consultez nos horaires détaillés', horaires_path %> </p>
         <ul class="bullet-point">
             <li>en voiture. Il y a plusieurs parkings gratuits à proximité : <em>Place Séraucourt</em>, <em>Cour Anatole France</em>, <em>Place des Marronniers</em> par exemple. Il existe aussi des parkings payants : <em>Place du Berry</em> ou le parking <em>Mairie-Cathédrale</em>.</li>
             <li>en bus, arrêt <em>Nation</em>, <em>Planchat</em> ou <em>Europe</em>.</li>
